--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MC-maintenance(機械查核保養)</title>
+    <title>DK Maintenance(DK機械查核保養)</title>
     <style>
         :root {
             --primary-color: #007bff;
@@ -322,7 +322,7 @@
         <div class="header">
             <div class="header-btn" onclick="logout()" title="Lock / Logout (鎖定/登出)">🔒</div>
             <div class="header-title">
-                <h2>MC-maintenance<br>機械查核保養</h2>
+                <h2>MC Maintenance<br>DK機械查核保養</h2>
             </div>
             <div class="header-btn" onclick="openSettings()" title="Settings (設定)">⚙️</div>
         </div>
