--- a/index.html
+++ b/index.html
@@ -461,6 +461,11 @@
             <div class="modal-group" style="border-top: 1px solid #eee; padding-top: 15px; margin-top: 15px;">
                 <label>📊 Project Data Sheets (各站點報表)</label>
                 
+                <button class="link-btn" onclick="window.open('https://docs.google.com/spreadsheets/d/18VGiWjdcdmVTsZhMq3gerXfC-ERJyiJ_SwSfcOi1ymI/edit?gid=0#gid=0', '_blank')">
+                    <span style="font-weight:bold; color:#0d6efd;">📑 Total Summary (四廠彙整總表)</span>
+                    <span>↗</span>
+                </button>
+
                 <button class="link-btn" onclick="window.open('https://docs.google.com/spreadsheets/d/1GcnAkIHAhnVjrH9bO9TQbdTUwQT17XtyQWUPh7WSTLA/edit?gid=0#gid=0', '_blank')">
                     <span>📑 MX Maintenance (Sheet)</span>
                     <span>↗</span>
